# crud_gestao_de_consumo_e_faturamento_energia

./: README.md  docker-compose.yml  pyproject.toml
backend/: DockerFile  crud.py  database.py  main.py  models.py  requirements.txt  routers.py  schemas.py
frontend/: app.py
frontend/.streamlit/: config.toml
