[tool.poetry]
name = "crud-gestão-de-consumo-e-faturamento-energia"
version = "0.1.0"
description = ""
authors = ["Ricardo Marques <dataricardom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.38"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
fastapi = "^0.115.8"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
